--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -20,13 +20,13 @@
                     <h2 class="lead descripcion">FullStack Developer Jr.</h2>
                     <div class="icons-section mt-3">
                         <div class="social-links mt-2">
-                            <img src="{% static 'images/email_icon.png' %}" alt="Email Icon" class="icon me-2">
+                            <img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="icon me-2">
                             kikoamarillo94@gmail.com
                             <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-3">
-                                <img src="{% static 'images/linkedin_icon.png' %}" alt="LinkedIn Icon" class="icon">
+                                <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="icon">
                             </a>
                             <a href="https://github.com/KikolasDEV" target="_blank">
-                                <img src="{% static 'images/tecnologias/Github_light.svg' %}" alt="GitHub Icon" class="icon">
+                                <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="icon">
                             </a>
                         </div>
                     </div>
@@ -90,39 +90,39 @@
         <h2 class="text-center">Tecnologías y Herramientas</h2>
         <div class="slider">
             <div class="slide-track">
-                <div class="slide"><img src="{% static 'images/tecnologias/python.jpg' %}" alt="python"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/django.png' %}" alt="django"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/flask.png' %}" alt="flask"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/git.jpg' %}" alt="git"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/github.png' %}" alt="github"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/html.png' %}" alt="html"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/css.png' %}" alt="css"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/javascript.png' %}" alt="javascript"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.png' %}" alt="bootstrap"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/java.jpg' %}" alt="java"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/mysql.png' %}" alt="mysql"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.png' %}" alt="postgresql"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.png' %}" alt="sqlite"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/csharp.png' %}" alt="csharp"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/godot.jpg' %}" alt="godot"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/unity.png' %}" alt="unity"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/python.svg' %}" alt="python"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/django.svg' %}" alt="django"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/flask.svg' %}" alt="flask"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/git.svg' %}" alt="git"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/github.svg' %}" alt="github"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/html.svg' %}" alt="html"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/css.svg' %}" alt="css"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/javascript.svg' %}" alt="javascript"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.svg' %}" alt="bootstrap"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/java.svg' %}" alt="java"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/mysql.svg' %}" alt="mysql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.svg' %}" alt="postgresql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.svg' %}" alt="sqlite"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/csharp.svg' %}" alt="csharp"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/godot.svg' %}" alt="godot"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/unity.svg' %}" alt="unity"></div>
 
-                <div class="slide"><img src="{% static 'images/tecnologias/python.jpg' %}" alt="python"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/django.png' %}" alt="django"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/flask.png' %}" alt="flask"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/git.jpg' %}" alt="git"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/github.png' %}" alt="github"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/html.png' %}" alt="html"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/css.png' %}" alt="css"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/javascript.png' %}" alt="javascript"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.png' %}" alt="bootstrap"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/java.jpg' %}" alt="java"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/mysql.png' %}" alt="mysql"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.png' %}" alt="postgresql"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.png' %}" alt="sqlite"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/csharp.png' %}" alt="csharp"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/godot.jpg' %}" alt="godot"></div>
-                <div class="slide"><img src="{% static 'images/tecnologias/unity.png' %}" alt="unity"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/python.svg' %}" alt="python"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/django.svg' %}" alt="django"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/flask.svg' %}" alt="flask"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/git.svg' %}" alt="git"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/github.svg' %}" alt="github"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/html.svg' %}" alt="html"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/css.svg' %}" alt="css"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/javascript.svg' %}" alt="javascript"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.svg' %}" alt="bootstrap"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/java.svg' %}" alt="java"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/mysql.svg' %}" alt="mysql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.svg' %}" alt="postgresql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.svg' %}" alt="sqlite"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/csharp.svg' %}" alt="csharp"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/godot.svg' %}" alt="godot"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/unity.svg' %}" alt="unity"></div>
             </div>
         </div>
     </section>
