--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -23,7 +23,7 @@
     <nav class="navbar bg-body-tertiary border-bottom border-body fixed-top russo-one-regular" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}">
-            <img src="{% static 'images/KikolasDEV_logo.png' %}" alt="Logo KikolasDEV" class="logo-icon me-2">
+            <img src="{% static 'images/logos/KikolasDEV_logo.png' %}" alt="Logo KikolasDEV" class="logo-icon me-2">
             <span>KikolasDEV</span>
         </a>
         <ul class="nav justify-content-end">
