--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -20,9 +20,9 @@
 </head>
 
 <body class="loader d-flex flex-column min-vh-100">
-    <nav class="navbar bg-body-tertiary border-bottom border-body fixed-top russo-one-regular" data-bs-theme="dark">
+    <nav class="navbar navbar-top fixed-top russo-one-regular" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}">
+        <a class="navbar-brand d-flex align-items-center logotype" href="{% url 'index' %}">
             <img src="{% static 'images/logos/KikolasDEV_logo.png' %}" alt="Logo KikolasDEV" class="logo-icon me-2">
             <span>KikolasDEV</span>
         </a>
@@ -49,6 +49,21 @@
         {% endblock %}
     </div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const navbar = document.querySelector(".navbar");
+        window.addEventListener("scroll", function () {
+            if (window.scrollY > 50) {
+                navbar.classList.remove("navbar-top");
+                navbar.classList.add("navbar-scrolled");
+            } else {
+                navbar.classList.add("navbar-top");
+                navbar.classList.remove("navbar-scrolled");
+            }
+        });
+    });
+</script>
+
 <!-- Enlace a los archivos JavaScript -->
 <script src="{% static 'js/editor.js' %}"></script>
 <!-- particles.js library -->
@@ -58,11 +73,40 @@
 <script src="{% static 'js/particles.js' %}"></script>
 </body>
 
-<footer class="bg-dark text-center text-light py-4">
-    <div class="container">
-        <p>&copy; 2024 José Francisco González Amarillo</p>
-        <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/KikolasDEV" target="_blank">GitHub</a>
+<footer class="text-center py-4">
+    <div class="container d-flex justify-content-between align-items-center flex-wrap">
+        <!-- Lista de enlaces -->
+        <div class="footer-links text-start">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Stack</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Experiencia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Texto e iconos alineados -->
+        <div class="footer-info d-flex flex-column align-items-end text-end">
+            <p class="mb-2">&copy; 2024 KikolasDEV by José Francisco González Amarillo</p>
+            <div class="d-flex align-items-center pt-1">
+                <img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="footer-icon">
+                <span class="me-3">kikoamarillo94@gmail.com</span>
+                <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-3">
+                    <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="footer-icon">
+                </a>
+                <a href="https://github.com/KikolasDEV" target="_blank" class="me-3">
+                    <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="footer-icon">
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
 </html>
