--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -74,7 +74,7 @@
 </body>
 
 <footer class="text-center py-4">
-    <div class="container d-flex justify-content-between align-items-center flex-wrap">
+    <div class="container d-flex justify-content-between align-items-center flex-wrap russo-one-regular">
         <!-- Lista de enlaces -->
         <div class="footer-links text-start">
             <ul class="nav">
@@ -94,16 +94,16 @@
         </div>
 
         <!-- Texto e iconos alineados -->
-        <div class="footer-info d-flex flex-column align-items-end text-end">
+        <div class="footer-info d-flex flex-column align-items-end text-end markazi-text">
             <p class="mb-2">&copy; 2024 KikolasDEV by José Francisco González Amarillo</p>
             <div class="d-flex align-items-center pt-1">
-                <img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="footer-icon">
-                <span class="me-3">kikoamarillo94@gmail.com</span>
-                <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-3">
-                    <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="footer-icon">
+                <img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="footer-icon mb-1">
+                <span class="me-4 ms-1">kikoamarillo94@gmail.com</span>
+                <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-2">
+                    <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="footer-icon mb-1">
                 </a>
                 <a href="https://github.com/KikolasDEV" target="_blank" class="me-3">
-                    <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="footer-icon">
+                    <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="footer-icon mb-1">
                 </a>
             </div>
         </div>
