--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -9,14 +9,17 @@
             <div class="row">
                 <div class="col-md-4 text-center">
                     <img src="{% static 'images/Kiko_Amarillo_CARA.jpg' %}" alt="José Francisco González Amarillo" class="rounded-circle profile-image mb-3">
-                    <div class="mt-3">
+                    <div class="mt-4 ms-3">
                         <a href="{% static 'CV_Jose_Francisco_Gonzalez_Amarillo.pdf' %}" class="btn btn-primary me-2" download="CV_Jose_Francisco_Gonzalez_Amarillo.pdf">
                         Descargar CV
                         </a>
                     </div>
                 </div>
-                <div class="col-md-8 d-flex flex-column justify-content-center align-items-end text-end">
-                    <h1 class="nombre-completo">José Francisco González Amarillo</h1>
+                <div class="col-md-8 d-flex flex-column justify-content-center align-items-end text-end px-5">
+                    <h1 class="nombre-completo">
+                        José Francisco<br>
+                        González Amarillo
+                    </h1>
                     <h2 class="lead descripcion">FullStack Developer Jr.</h2>
                     <div class="icons-section mt-3">
                         <div class="social-links mt-2">
