--- a/myportfolio/templates/projects/contact.html
+++ b/myportfolio/templates/projects/contact.html
@@ -1,9 +1,10 @@
 {% extends "projects/base.html" %}
 {% load django_bootstrap5 %}
+{% load static %}
 {% block body_block %}
 
-<div class="container contact-page mt-3 pt-5">
-    <h2 class="text-center">Contacto</h2>
+<div class="container contact-page pt-5 mt-5">
+    <h1 class="text-center">Contacto</h1>
 
     {% if messages %}
         <div class="alert alert-success" role="alert">
@@ -13,22 +14,35 @@
         </div>
     {% endif %}
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <p class="lead text-center">Rellena este formulario o escribe directamente a mi correo<br>
-                <strong><i class="fas fa-envelope"></i> kikoamarillo94@gmail.com</strong></p>
+    <div class="row justify-content-center mb-3">
+        <div class="col-md-12">
+            <h2 class="lead text-center">Rellena este formulario o escribe directamente a mi correo
+                <strong><img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="gmail-contact mb-1 ms-1"> kikoamarillo94@gmail.com</strong></h2>
         </div>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form method="POST">
-                {% csrf_token %}
-                {% bootstrap_field form.nombre %}
-                {% bootstrap_field form.email %}
-                {% bootstrap_field form.asunto %}
+    <form method="POST">
+    {% csrf_token %}
+        <div class="row justify-content-center">
+            <!-- Sección izquierda con los campos del formulario -->
+            <div class="col-md-6">
+                    <div class="mb-3">
+                        {% bootstrap_field form.nombre %}
+                    </div>
+                    <div class="mb-3">
+                        {% bootstrap_field form.email %}
+                    </div>
+                    <div class="mb-3">
+                        {% bootstrap_field form.asunto %}
+                    </div>
+                    <div class="mb-3">
+                        <p>¡Cualquier feedback (respetando SIEMPRE) es bienvenido!✨<br>
+                        Ante todo, muchísimas gracias por tu apoyo e interés. ¡Nos vemos!💻</p>
+                    </div>
+            </div>
 
-                <!-- Quill editor container -->
+            <!-- Sección derecha con el editor de mensaje -->
+            <div class="col-md-6">
                 <div class="form-group">
                     <label for="editor-container">Mensaje</label>
                     <div id="editor-container">
@@ -53,23 +67,23 @@
                             <button class="ql-list" value="ordered"></button>
                             <button class="ql-list" value="bullet"></button>
                         </span>
-                        <span class="ql-formats">
+                        <span class="ql-formats me-2">
                             <button class="ql-clean"></button>
                         </span>
                     </div>
-                    <div id="editor" style="height: 200px; background-color: white;">
-                    </div>
+                    <div id="editor" style="height: 300px; background-color: white;"></div>
+                    <!-- Hidden textarea to hold the content from Quill -->
+                    <textarea name="mensaje" id="mensaje" style="display:none;"></textarea>
                 </div>
-                <!-- Hidden textarea that will hold the content from Quill -->
-                <textarea name="mensaje" id="mensaje" style="display:none;"></textarea>
-
-                <div class="d-grid mt-3">
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </div>
-            </form>
+            </div>
         </div>
-    </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-center">
+                <button type="submit" class="btn btn-danger mt-4 btn-contact">Enviar</button>
+            </div>
+        </div>
+    </form>
 </div>
 
 {% endblock %}
-
