--- a/myportfolio/templates/projects/contact.html
+++ b/myportfolio/templates/projects/contact.html
@@ -4,7 +4,7 @@
 {% block body_block %}
 
 <div class="container contact-page pt-5 mt-5">
-    <h1 class="text-center">Contacto</h1>
+    <h1 class="text-center russo-one-regular">Contacto</h1>
 
     {% if messages %}
         <div class="alert alert-success" role="alert">
@@ -16,7 +16,7 @@
 
     <div class="row justify-content-center mb-3">
         <div class="col-md-12">
-            <h2 class="lead text-center">Rellena este formulario o escribe directamente a mi correo
+            <h2 class="lead text-center contact-descripcion">Rellena este formulario o escribe directamente a mi correo
                 <strong><img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="gmail-contact mb-1 ms-1"> kikoamarillo94@gmail.com</strong></h2>
         </div>
     </div>
@@ -80,7 +80,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-danger mt-4 btn-contact">Enviar</button>
+                <button type="submit" class="btn btn-danger mt-4 btn-contact russo-one-regular">Enviar</button>
             </div>
         </div>
     </form>
