--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -2,16 +2,22 @@
 {% load static %}
 {% block body_block %}
 
-<div class="container mt-5 pt-3">
+<div class="container py-5">
     <section id="sobre-mi" class="d-flex align-items-center mt-5 pt-5 pb-5 russo-one-regular">
         <div id="particles-js"></div>
         <div class="content-wrapper">
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center px-5 py-5">
                     <img src="{% static 'images/Kiko_Amarillo_CARA.jpg' %}" alt="José Francisco González Amarillo" class="rounded-circle profile-image mb-3">
-                    <div class="mt-4 ms-3">
+                    <div class="mt-4 ms-5">
                         <a href="{% static 'CV_Jose_Francisco_Gonzalez_Amarillo.pdf' %}" class="btn btn-primary me-2" download="CV_Jose_Francisco_Gonzalez_Amarillo.pdf">
                         Descargar CV
+                        </a>
+                        <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank">
+                            <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="icon mx-3">
+                        </a>
+                        <a href="https://github.com/KikolasDEV" target="_blank">
+                            <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="icon mx-3">
                         </a>
                     </div>
                 </div>
@@ -20,17 +26,11 @@
                         José Francisco<br>
                         González Amarillo
                     </h1>
-                    <h2 class="lead descripcion">FullStack Developer Jr.</h2>
+                    <h2 class="lead index-descripcion">FullStack Developer Jr.</h2>
                     <div class="icons-section mt-3">
                         <div class="social-links mt-2">
                             <img src="{% static 'images/logos/gmail.svg' %}" alt="Email Icon" class="icon me-2">
                             kikoamarillo94@gmail.com
-                            <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank" class="me-3">
-                                <img src="{% static 'images/logos/linkedin.svg' %}" alt="LinkedIn Icon" class="icon">
-                            </a>
-                            <a href="https://github.com/KikolasDEV" target="_blank">
-                                <img src="{% static 'images/tecnologias/github.svg' %}" alt="GitHub Icon" class="icon">
-                            </a>
                         </div>
                     </div>
                 </div>
