--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -52,6 +52,7 @@
 <!-- Enlace a los archivos JavaScript -->
 <script src="{% static 'js/scroll.js' %}"></script>
 <script src="{% static 'js/editor.js' %}"></script>
+<script src="{% static 'js/typing-name.js' %}"></script>
 <!-- particles.js library -->
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <!-- stats.js library -->
